--- a/style.css
+++ b/style.css
@@ -1,5 +1,40 @@
+h1{ text-align: center;
+}
+nav >a{
+   
+  text-align: center;
+    background-color: lightgrey;
+}
+img {
+  display: block;
+  margin: 0 auto;
+  
+}
 body {
+  
   width: 100%;
   height: 100%;
-  margin: 0;
+  text-align: center;
+  margin: 0 auto;
+  font-size: 60% ;
 }
+
+section > p {
+  margin: 0 auto;
+
+}
+
+
+#featured-property > p{
+  text-align: center;
+  width: 800px ;
+
+}
+
+#details > div {
+  float: left;
+  background-color: red;
+  width: 25%;
+  
+}
+
